2008-01-15  Murray Cumming  <murrayc@murrayc.com>

	* gdrive.c:
	* gfile.c:
	* gmount.c:
	* gvolume.c: For async functions that have no non-async 
	version, document that the GAsyncReadyCallback may be NULL.
	Bug #509626.

2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * gmemoryinputstream.c:
        * gmemoryoutputstream.c:
	Don't do pointer arithmetic on void * (#508602)
	Patch from Kazuki IWAMOTO

2008-01-14  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.2 ===

2008-01-14  Alexander Larsson  <alexl@redhat.com>

	* gfile.c (g_file_monitor_file):
	Don't set error here, since we fallback to polling monitor.

2008-01-14  Alexander Larsson  <alexl@redhat.com>

        * gfile.[ch]:
        (g_file_monitor_directory):
        (g_file_monitor_file):
	Add GError to file monitor calls
	
        * glocaldirectorymonitor.c:
        * glocaldirectorymonitor.h:
        * glocalfile.c:
        * glocalfilemonitor.c:
        * glocalfilemonitor.h:
        * gunixmounts.c:
	Update for above change

2008-01-14  Alexander Larsson  <alexl@redhat.com>

        * glocalfile.c:
        (match_prefix):
	Handle root correctly in g_file_get_relative_path (#508719)

2008-01-14  Alexander Larsson  <alexl@redhat.com>

        * gasyncresult.c:
	Clean up docs and example for GAsyncResult (#508074)

2008-01-11  Murray Cumming  <murrayc@murrayc.com>

	* gfile.c: Clarify the sentence about GAsyncReadyCallback, 
	and correct some spelling mistakes. Bug #508108.

2008-01-11  Matthias Clasen <mclasen@redhat.com>

	* glocalfileinfo.c: Add a comment.

2008-01-10  Murray Cumming  <murrayc@murrayc.com>

	* gfileinfo.c: GFileInfo description: Mention 
	how to actually set attributes in a GFile and how to discover 
	which attributes are settable. Bug #508378.

2008-01-10  A. Walton  <awalton@svn.gnome.org>

	* gdesktopappinfo.c: (g_app_info_get_all_for_type),
	(g_app_info_get_default_for_type):
	Check for NULL content types.

2008-01-10  Frederic Crozat  <fcrozat@mandriva.com>